@@ -6,13 +6,13 @@ xhost_CFLAGS = @XHOST_CFLAGS@
 
 xhost_LDADD = @XHOST_LIBS@
 
-appman_SOURCES = xhost.man
+appman_PRE = xhost.man
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST = $(appman_SOURCES)
+EXTRA_DIST = $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
